What's new...

Sept 28/2020 : JF 28.0 released
  - MODBUS : added support for IR and HR tags
    - jfDataLogger/0.27
    - jfDataLoggerPlus/0.11
    - jfControls/0.8
    - jfDVR/0.11
  - services : set log retention to 30 days
    - jfDNS/0.12
    - jfDHCP/0.11
    - jfProxy/0.9
    - jfSocks/0.5
    - jfStun/0.6
  - jfPhone/1.21
    - fix : transfer issue
    - new : added SIP logging option

Sept 19/2020 : JF 27.2 released
  - jfBackup/0.18
    - new : detect tapes with no barcode

Sept 18/2020 : JF 27.1 released
  - jfSOCKS/0.4
    - fix : server domain support
    - new : client now supports domain names

Sept 16/2020 : JF 27.0 released
  - jfSOCKS/0.3
    - new : added SOCKS4a/5 support
    - new : added SSL support
    - new : added config tool
    - new : added client tool (redirs local port thru socks server to remote ip)

Sept 12/2020 : JF 26.1 released
  - jfBackup/0.17
    - fix : NPEs and ABEs

Sept 5/2020 : JF 26.0 released
  - fix : support JDK15
  - jfControls/0.7
    - fix : many issues
  - jfBackup/0.16
    - fix : error handling
    - new : added client status page

Aug 28/2020 : JF 25.2 released
  - VoIP/SIP
    - fix : ACK only for INVITE related requests
    - new : ignore 481 (unknown call leg)
  - jfPhone/1.20
    - improved SIP handling
    - fixes issue #4 (Cant make Phonecalls over AVM Fritzbox 7590)

Aug 26/2020 : JF 25.1 released
  - jfDVR/0.10
    - fix : use proper endianness of PLC tags
  - jfControls/0.6
    - fix : NPE
    - fix : get panel by name

Aug 3/2020 : JF 25.0 released
  - completed ARM64 support
    - Arm Neon is much better API and data types compared to Intel's SSE
    - download Raspberry PI images from raspi.debian.net
    - images from raspberrypi.org are:
      - only 32bit (64bit beta still uses 32bit apps)
      - package names are different requiring modified scripts
      - packages are old (Chromium 78 suffers from major bugs)
      - progress is slow
    - images from ubuntu are: